--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
     "express-handlebars-sections": "^1.0.1",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "pg": "^8.13.1"
   }
 }
