--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
     "express-handlebars-sections": "^1.0.1",
+    "express-session": "^1.18.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
     "pg": "^8.13.1"
